WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54532
On platforms without platformWidgets, going Back to a scrolled page draws at the top-left before drawing at the restored scroll position
https://bugs.webkit.org/show_bug.cgi?id=54532
Summary
On platforms without platformWidgets, going Back to a scrolled page draws at ...
John Sullivan
Reported
2011-02-15 22:53:42 PST
To reproduce (on Windows or using WebKit2 on Mac, e.g.): 1. Visit
http://www.apple.com
in a window that’s narrow enough that a horizontal scroller is needed. 2. Scroll to the right side of the page. 3. Click one of the links at the top (e.g. “iPad”). 4. Click Back button
http://www.apple.com
draws at the top-left, then redraws with the correct scroll position. This does not happen in shipping Safari on Mac (due to the use of platformWidgets for the scrollers, as it turns out).
Attachments
Patch to not send didFirstLayout for a nested layout.
(2.10 KB, patch)
2011-02-15 23:02 PST
,
John Sullivan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2011-02-15 23:02:15 PST
Created
attachment 82594
[details]
Patch to not send didFirstLayout for a nested layout.
mitz
Comment 2
2011-02-15 23:04:19 PST
<
rdar://problem/8998838
>
Antti Koivisto
Comment 3
2011-02-15 23:24:34 PST
Comment on
attachment 82594
[details]
Patch to not send didFirstLayout for a nested layout. r=me
Mark Rowe (bdash)
Comment 4
2011-02-15 23:40:32 PST
Committed
r78687
.
http://trac.webkit.org/changeset/78687
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug