Dan Bernstein came up with this fix while we debugged it. I just typed.

Reviewed by Antti Koivisto.

https://bugs.webkit.org/show_bug.cgi?id=54532
On platforms without platformWidgets, going Back to a scrolled page
draws at the top-left before drawing at the restored scroll position

<rdar://problem/8998838>

* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks):
Don't send the didFirstLayout and didFirstVisuallyNonEmptyLayout callbacks
for nested layouts. Doing so was causing ScrollView::setScrollPosition()
to short-circuit.



Canonical link: https://commits.webkit.org/68667@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78687 268f45cc-cd09-0410-ab3c-d52691b4dbfc